--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@tabler/icons-react": "^3.27.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.16.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
